# LingosBypass

./: .gitignore  CMakeLists.txt  README.md  commands.txt  dupa.txt  logs.txt  wordsetHTML.txt
inc/: CurlHandler.h
scripts/: installJson.sh  run.sh
src/: CurlHandler.cpp  main.cpp
